--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,6 +10,11 @@ name: Release
   push:
     tags:
       - '*'
+  workflow_run:
+    workflows: 'Molecule Test'
+    branches: ['main']
+    types:
+      - completed
 
 defaults:
   run:
@@ -20,6 +25,7 @@ jobs:
   release:
     name: Release
     runs-on: ubuntu-latest
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     steps:
       - name: Check out the codebase.
         uses: actions/checkout@v2
