refactor ansible task to remove configure_module
Signed-off-by: darsh12 <darshan2730@gmail.com>

--- a/molecule/ssl/converge.yml
+++ b/molecule/ssl/converge.yml
@@ -2,7 +2,7 @@
 - name: Converge
   hosts: all
   tasks:
-    - name: "Yara With No Modules"
+    - name: "Yara With SSL"
       include_role:
         name: "yara"
       vars:
