dont check for idempotence and update verify to include checking for 4 only
Signed-off-by: darsh12 <darshan2730@gmail.com>

--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -17,3 +17,31 @@ lint: |
   set -e
   yamllint .
   ansible-lint .
+scenario:
+  name: default
+  test_sequence:
+    - lint
+    - destroy
+    # - dependency
+    - syntax
+    - create
+    # - prepare
+    - converge
+    # - idempotence
+    - side_effect
+    - verify
+    - destroy
+scenario:
+  name: default
+  test_sequence:
+    - lint
+    - destroy
+    # - dependency
+    - syntax
+    - create
+    # - prepare
+    - converge
+    # - idempotence
+    - side_effect
+    - verify
+    - destroy
