--- a/molecule/all-modules/molecule.yml
+++ b/molecule/all-modules/molecule.yml
@@ -17,3 +17,17 @@ lint: |
   set -e
   yamllint .
   ansible-lint .
+scenario:
+  name: default
+  test_sequence:
+    - lint
+    - destroy
+    # - dependency
+    - syntax
+    - create
+    # - prepare
+    - converge
+    # - idempotence
+    - side_effect
+    - verify
+    - destroy
